# Taller-2-MLOPS

./: README.md  pyproject.toml
.github/workflows/: ci-publish.yml
src/taller2_mlopspkg_angelcast2002.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_core.py
